# lok-server-next

./: .gitignore  CHANGELOG.md  CONFIG.md  Dockerfile  README.md  config.yaml  docker-compose.yaml  ins.py  manage.py  pyproject.toml  run-debug.sh  run.sh  shit.json  tmanage.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-build.yaml  docker-dev.yaml  docker-next.yaml  release.yaml
api/management/: datalayer.py  enums.py  filters.py  scalars.py  schema.py  types.py
authapp/: admin.py  extension.py  grants.py  key.py  models.py  server.py  tests.py  token_generators.py  types.py  urls.py  views.py
authapp/migrations/: 0001_initial.py  0002_initial.py  0003_alter_oauth2client_organization_and_more.py  0003_alter_oauth2token_access_token_and_more.py  0004_authorizationcode_organization.py  0005_remove_authorizationcode_organization_and_more.py  0006_rename_membership_oauth2token_user.py  0007_oauth2client_id_token_signed_response_alg.py  0008_alter_oauth2client_grant_types_and_more.py
compositions/: generic.yaml
config_backend/compositions/: default.yaml
config_backend/instances/: fluss_next.yaml  rekuest_next.yaml
config_backend/services/: live.arkitekt.fluss.yaml  live.arkitekt.lok.yaml  live.arkitekt.rekuest-next.yaml
contrib/: docker_backend.py
contrib/backends/: docker_backend.py
contrib/builders/: arkitekt.py  livekitio.py  ollama.py
contrib/config_backend/: __init__.py  backend.py
contrib/config_instances/: fluss_next.yaml
docker_backend/templates/: live.arkitekt.generic.yaml  live.arkitekt.lok.yaml
ekke/: apps.py  channel.py  context.py  cors.py  decode.py  directives.py  errors.py  expand.py  imitate.py  settings.py  structs.py  types.py  utils.py
ekke/consumers/: __init__.py  http.py  ws.py
fakts/: admin.py  apps.py  base_models.py  builders.py  channels.py  config_models.py  enums.py  errors.py  fields.py  filters.py  forms.py  inputs.py  logic.py  models.py  scalars.py  scan.py  tests.py  types.py  urls.py  utils.py  validator_registry copy.py  validator_registry.py  validators.py  views.py
fakts/backends/: backend_registry.py  base.py  enums.py  instances.py
fakts/linkers/: template_linker.py
fakts/migrations/: 0001_initial.py  0002_alter_service_description.py  0002_initial.py  0002_instancealias_kind.py  0003_alter_composition_token.py  0003_client_logo.py  0003_client_scopes.py  0003_composition_errors_composition_requirements_hash_and_more.py  0003_devicecode_staging_public.py  0003_instancealias_ssl.py  0003_redeemtoken_organization.py  0004_alter_composition_name_and_more.py  0004_alter_serviceinstance_device_linkinspector_and_more.py  0004_instancealias_challenge.py  0004_redeemtoken_organization.py  0004_remove_client_only_one_per_releast_tenankt_and_kind_and_more.py  0004_serviceinstancemapping_optional.py  0005_client_name.py  0005_composition_client_composition_and_more.py  0005_kommunitypartner_partner_metadata_and_hook.py  0005_serviceinstance_allowed_organizations_computenode_and_more.py  0005_serviceinstancemapping_description.py  0006_alter_client_requirements_hash.py  0006_alter_release_requirements_instanceconfig_and_more.py  0006_alter_serviceinstance_composition_and_more.py  0006_compositiondevicecode.py  0006_remove_computenode_only_one_uniqure_node_name_per_organization_and_more.py  0007_add_client_statuses.py  0007_alter_devicecode_staging_kind_redeemtoken.py  0007_composition_token.py  0007_remove_client_only_one_per_release_user_and_organization_and_more.py  0008_alter_redeemtoken_client.py  0008_client_public_sources.py  0008_client_role_devicecode_staging_role.py  0008_composition_creator_composition_description.py  0009_client_redirect_uris.py  0009_devicegroup_computenode_device_groups.py  0009_remove_serviceinstance_only_one_instance_id_per_release_organization_and_device_and_instance_and_mor.py  0009_rename_computenode_device.py  0010_layer_organization_alter_layer_kind.py  (+15 more)
fakts/services/: __init__.py  clients.py  compositions.py  device_codes.py  rendering.py  tokens.py
ionscale/: apps.py  base_models.py  manager.py  repo.py  testing.py
kammer/: admin.py  apps.py  channels.py  filters.py  inputs.py  models.py  signals.py  types.py
kammer/migrations/: 0001_initial.py  0002_alter_agent_app.py  0002_initial.py  0002_rename_descendents_comment_descendants.py  0003_alter_comment_created_at_alter_comment_descendants_and_more.py  0003_stream.py  0004_stream_unique_stream_for_agent.py
karakter/: admin.py  apps.py  base_models.py  channels.py  enums.py  fields.py  filters.py  forms.py  hashers.py  inputs.py  management_types.py  managers.py  models.py  scalars.py  signals.py  types.py  urls.py  views.py
karakter/migrations/: 0001_initial.py  0002_alter_comchannel_user.py  0002_groupprofile_bio.py  0002_organization_device_salt.py  0002_profile_bio.py  0002_role_creating_instance.py  0003_alter_user_groups_alter_user_user_permissions.py  0003_organizationprofile.py  0003_profile_avatar.py  0003_scope.py  0004_invite.py  0004_membership_created_through.py  0004_systemmessage.py  0005_alter_invite_email.py  0005_role_used_by_scope_used_by_and_more.py  0005_systemmessage_action_systemmessage_hook_and_more.py  (+2 more)
komment/: admin.py  apps.py  channels.py  enums.py  filters.py  inputs.py  models.py  scalars.py  types.py
lok/: asgi.py  basepath.py  schema.py  settings.py  settings_test.py  urls.py
lok_server/: asgi.py  configuration.py  management_schema.py  schema.py  settings.py  settings_test.py  urls.py
lokale/: django_settings.py  settings_model.py
oauth2_provider/: decorators.py  forms.py  http.py  models.py  oauth2_backends.py  oauth2_validators.py  settings.py  urls.py  validators.py
pak/: admin.py  apps.py  channels.py  filters.py  inputs.py  models.py  signals.py  types.py
templates/: base.html  home.html  index.html  login.html
tests/: conftest.py  factories.py  test_add_user.py  test_config.py  test_fakts_flows.py  test_fakts_views_errors.py  test_graphql_mutations.py  test_ionscale_sync.py  test_print_schema.py  test_services.py  test_tokens.py
(+151 files in other folders)
