[project]
name = "lok-server"
version = "0.1.0"
description = ""
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "django>=4.2.4,<5",
    "strawberry-graphql>=0.199.2,<0.200",
    "strawberry-graphql-django>=0.16.0,<0.17",
    "channels>=4.0.0,<5",
    "kante==0.1.6",
    "omegaconf>=2.3.0,<3",
    "psycopg>=3",
    "daphne>=4.0.0,<5",
    "channels-redis>=4.1.0,<5",
    "django-choices-field>=2.2.2,<3",
    "authentikate==0.1.6",
    "namegenerator>=1.0.6,<2",
    "oauthlib>=3.2.2,<4",
    "pyjwt>=2.8.0,<3",
    "jwcrypto>=1.5.0,<2",
    "jinja2>=3.1.2,<4",
    "django-registration~=3.4",
    "django-cors-headers>=4.2.0,<5",
    "django-allauth>=0.58.2,<0.59",
    "pillow>=10.1.0,<11",
    "django-health-check>=3.18.1,<4",
    "docker>6,<7",
    "django-probes>=1.7.0,<2",
    "livekit-api>=0.5.1,<0.6",
    "boto3>=1.37.13,<2",
]

[dependency-groups]
dev = [
    "black>=23.7.0,<24",
    "django-stubs>=4.2.3,<5",
    "pytest>=7.4.3,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lok.settings_test"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "tests/*.py"]
